avoid hiting our P and make it be behind our img

--- a/style.css
+++ b/style.css
@@ -289,6 +289,8 @@ body
     height: calc(100% + 100px);
     top: -50px;
     position: absolute;
+    right: 0;
+    z-index: -1;
 }
 .services .secrives-content .image img
 {
